src/pages/fr/v1.19.0/getting-started.mdx
---
title: "Premiers pas"
metaTitle: "Documentation d'OpenReplay"
metaDescription: "OpenReplay est une pile de relecture de sessions open source et auto-hébergée qui vous permet de voir ce que les utilisateurs font sur votre application web, vous aidant à résoudre les problèmes plus rapidement."

---
import ORCard from '~/components/Card/ORCard.astro'
import IconText from '~/components/Card/IconText.astro'

Nous sommes ici pour vous aider à démarrer avec notre plateforme et commencer à récolter les avantages de notre puissant traqueur. Suivez les étapes ci-dessous pour démarrer et fonctionner :

## Déployer OpenReplay
<div class="col-span-12 card">
	<div class="relative border text-left">
		<div class="relative flex flex-col gap-6">
			<div class="flex items-center gap-3">
				<div class="shrink-0 theme-icon w-8 h-8 flex items-center justify-center rounded">
					<svg xmlns="http://www.w3.org/2000/svg" fill="var(--theme-accent-full)" class="bi bi-infinity"
							 viewBox="0 0 16 16">
						<path
							d="M5.68 5.792 7.345 7.75 5.681 9.708a2.75 2.75 0 1 1 0-3.916ZM8 6.978 6.416 5.113l-.014-.015a3.75 3.75 0 1 0 0 5.304l.014-.015L8 8.522l1.584 1.865.014.015a3.75 3.75 0 1 0 0-5.304l-.014.015L8 6.978Zm.656.772 1.663-1.958a2.75 2.75 0 1 1 0 3.916L8.656 7.75Z"/>
					</svg>
				</div>
				<h4>Déployer n'importe où</h4>
			</div>
			<span class="flex-grow">Suivez nos guides étape par étape pour le déployer sur les principaux clouds publics et plateformes.</span>
		</div>
		<div class="mt-6">
			<div class="hidden">
				<button class="relative inline-flex items-center space-x-2 text-center rounded px-3 py-2" type="button">
					<span class="truncate">Get started</span>
				</button>
			</div>
			<div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-4">
				<IconText url="/deployment/deploy-aws" title="AWS"/>
				<IconText url="/deployment/deploy-azure" title="Azure"/>
				<IconText url="/deployment/deploy-gcp" title="GCP"/>
				<IconText url="/deployment/deploy-digitalocean" title="Digital Ocean"/>
			</div>
		</div>
		<div class="flex justify-start mt-5">
			<a class="block text-center w-fit learn-more" href="/deployment/"> En savoir plus </a>
		</div>
	</div>
</div>


## Configuration
<div class="grid grid-cols-1 md:grid-cols-3 gap-3">
	<div class="card">
		<div class="relative border text-left col-span-4">
			<div class="relative flex flex-col gap-6">
				<div class="flex items-center gap-3">
					<div class="shrink-0 theme-icon w-8 h-8 flex items-center justify-center rounded">
						<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-braces-asterisk"
								 viewBox="0 0 16 16">
							<path fill-rule="evenodd"
										d="M1.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C2.25 2 1.49 2.759 1.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6ZM14.886 7.9v.164c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456v-1.3c-1.114 0-1.49-.362-1.49-1.456V4.352C14.51 2.759 13.75 2 12.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6ZM7.5 11.5V9.207l-1.621 1.621-.707-.707L6.792 8.5H4.5v-1h2.293L5.172 5.879l.707-.707L7.5 6.792V4.5h1v2.293l1.621-1.621.707.707L9.208 7.5H11.5v1H9.207l1.621 1.621-.707.707L8.5 9.208V11.5h-1Z"/>
						</svg>
					</div>
					<h4>Configurer le traqueur</h4>
				</div>
				<span class="text-sm flex-grow">Configurez OpenReplay en quelques minutes et commencez à enregistrer les sessions des utilisateurs.</span>
			</div>
			<div class="mt-6">
				<div class="grid grid-cols-1 md:grid-cols-1 gap-3 md:gap-4">
					<IconText url="/ios-sdk/init" title="iOS (Beta)"/>
					<IconText url="/rn-sdk/init" title="React Native (Beta)"/>
					<IconText url="/using-or/snippet" title="JS Snippet"/>
					<IconText url="/using-or/react" title="React"/>
					<IconText url="/using-or/vue" title="Vue"/>
					<IconText url="/using-or/angular" title="Angular"/>
					<IconText url="/using-or/next" title="NextJS"/>
				</div>
			</div>
			<div class="flex justify-start mt-5">
				<a class="block text-center w-fit learn-more" href="/using-or/">
					En savoir plus
				</a>
			</div>
		</div>
	</div>
	<div class="card">
		<div class="relative border text-left col-span-4">
			<div class="relative flex flex-col gap-6">
				<div class="flex items-center gap-3">
					<div class="shrink-0 theme-icon w-8 h-8 flex items-center justify-center rounded">
						<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-sliders" viewBox="0 0 16 16">
							<path fill-rule="evenodd"
										d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3h9.05zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8h2.05zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1h9.05z"/>
						</svg>
					</div>
					<h4>Configurer</h4>
				</div>
				<span class="text-sm flex-grow">Configurez le traqueur pour capturer plus d'informations.</span>
			</div>
			<div class="mt-6">
				<div class="grid grid-cols-1 md:grid-cols-1 gap-3 md:gap-4">
					<ul class="list-none ml-0 pl-0">
						<li>
							<a href="/installation/identify-user">Identify users</a>
						</li>
						<li>
							<a href="/installation/metadata">Metadata</a>
						</li>
						<li>
							<a href="/installation/network-options">Network</a>
						</li>
					</ul>
				</div>
			</div>
			<div class="flex justify-start mt-5">
				<a class="block text-center w-fit learn-more" href="/installation/">
					En savoir plus
				</a>
			</div>
		</div>
	</div>
	<div class="card">
		<div class="relative border text-left col-span-4">
			<div class="relative flex flex-col gap-6">
				<div class="flex items-center gap-3">
					<div class="shrink-0 theme-icon w-8 h-8 flex items-center justify-center rounded">
						<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plug" viewBox="0 0 16 16">
							<path
								d="M6 0a.5.5 0 0 1 .5.5V3h3V.5a.5.5 0 0 1 1 0V3h1a.5.5 0 0 1 .5.5v3A3.5 3.5 0 0 1 8.5 10c-.002.434-.01.845-.04 1.22-.041.514-.126 1.003-.317 1.424a2.083 2.083 0 0 1-.97 1.028C6.725 13.9 6.169 14 5.5 14c-.998 0-1.61.33-1.974.718A1.922 1.922 0 0 0 3 16H2c0-.616.232-1.367.797-1.968C3.374 13.42 4.261 13 5.5 13c.581 0 .962-.088 1.218-.219.241-.123.4-.3.514-.55.121-.266.193-.621.23-1.09.027-.34.035-.718.037-1.141A3.5 3.5 0 0 1 4 6.5v-3a.5.5 0 0 1 .5-.5h1V.5A.5.5 0 0 1 6 0zM5 4v2.5A2.5 2.5 0 0 0 7.5 9h1A2.5 2.5 0 0 0 11 6.5V4H5z"/>
						</svg>
					</div>
					<h4>Étendre</h4>
				</div>
				<span class="text-sm flex-grow">Étendez votre expérience d'enregistrement avec des plugins.</span>
			</div>
			<div class="mt-6">
				<div class="grid grid-cols-1 md:grid-cols-1 gap-3 md:gap-4">
					<ul class="list-none ml-0 pl-0">
						<li>
							<a href="/plugins/assist">Assist</a>
						</li>
						<li>
							<a href="/plugins/redux">Redux</a>
						</li>
						<li>
							<a href="/plugins/graphql">GraphQL</a>
						</li>
					</ul>
				</div>
			</div>
			<div class="flex justify-start mt-5">
				<a class="block text-center w-fit learn-more" href="/plugins/">
					En savoir plus
				</a>
			</div>
		</div>
	</div>
</div>
